[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Vive <vitocorocovo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.23"  # Библиотека для Telegram бота
python-dotenv = "^0.21.0"  # Для загрузки переменных окружения

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
