[tool.poetry]
name = "music-post-bot"
version = "0.1.0"
description = "Telegram bot to post music with image and description"
authors = ["Vive <vitocorocovo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.21"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
